--- a/templates/parts/dotline.hbs
+++ b/templates/parts/dotline.hbs
@@ -1,6 +1,10 @@
 
-<div class="dotline {{~#if class}} {{class}}{{/if}} {{~#if isLocked}} locked{{/if}}" {{~#unless isLocked}}data-target="{{target}}"{{/unless}} data-value="{{data.value}}">
 
+
+<div class="dotline {{~#if class}} {{class}}{{/if}} {{~#if isLocked}} locked{{/if}}" {{~#unless isLocked}}data-target="{{target}}"{{/unless}} data-value="{{data.value}}">
+	{{#if dotlineLabel}}
+		<label class="dotline-label">{{dotlineLabel}}:&nbsp;</label>
+	{{/if}}
 	{{!-- Filled Dots --}}
 	{{#forloop 1 (calc (test value "??" data.value) "min" (test (test max "??" data.max) "??" (test value "??" data.value)))}}
 	<span class="dot full-dot {{~#if (test this "==" (test value "??" data.value))}} value-dot{{/if}} {{~#if ../svgKey}} svg-dot{{/if}}" data-value="{{this}}" data-dtype="Number">
