--- a/scss/sheets/_sheets.scss
+++ b/scss/sheets/_sheets.scss
@@ -1,138 +1,114 @@
-& {
-	background: var(--blades-black);
-}
-
-.window-header {
-	.window-title {
-		font-variant: small-caps;
-		margin-top: 1px;
-		margin-bottom: -1px;
-	}
-}
-
 .window-content {
 	background: var(--blades-black);
-	padding: var(--content-padding);
+	padding: 0;
 	overflow-x: hidden;
-	overflow-y: auto;
 
 	form.editable {
 		@import "../core/globals";
-		padding: 0 !important;
+
 		justify-content: flex-start;
 		max-height: 100%;
+
+		.sheet-img {
+			position: absolute;
+			height: 198px;
+			left: -10px;
+			z-index: zLevel(-1);
+			border: none;
+			mask-image: linear-gradient(to right, black 75%, transparent);
+		}
+
+		.sheet-img-bg {
+			position: absolute;
+			height: 100%;
+			width: 100%;
+			overflow: hidden;
+
+			> img {
+				position: absolute;
+				width: 100%;
+				top: -20%;
+				filter: saturate(0%) blur(3px);
+				opacity: 0.5;
+				transform: scaleX(-1);
+				mask-image: linear-gradient(to bottom, black, transparent);
+			}
+		}
+
+		.sheet-root {
+			position: absolute;
+			height: 100%;
+			width: 100%;
+			top: -10px;
+			left: 0px;
+		}
 	}
 }
 
-.window-content form.editable .sheet-img {
-	position: absolute;
-	height: 200px;
-	top: -10px;
-	left: -10px;
-	z-index: 1;
-	border: none;
-	mask-image: linear-gradient(to right, black 75%, transparent);
-}
+.window-content section {
 
-.window-content form.editable .sheet-img-bg {
-	position: absolute;
-	width: calc(100% + 2 * var(--content-padding)) !important;
-	height: calc(100% + var(--content-padding)) !important;
-	left: calc(-1 * var(--content-padding));
-	top: calc(-1 * var(--content-padding));
-	overflow: hidden;
-	pointer-events: none;
+	z-index: zLevel();
 
-	> img {
-		position: absolute;
-		width: 100%;
-		height: auto;
-		top: -20%;
-		left: 0;
-		filter: saturate(0%) blur(3px);
-		opacity: 0.5;
-		transform: scaleX(-1);
-		mask-image: linear-gradient(to bottom, black, transparent);
+	&.sheet-top {
+		display: grid;
+		grid-auto-columns: 1fr;
+		place-items: center stretch;
 		pointer-events: none;
+
+		input { pointer-events: auto }
+
+		.comp-control.comp-button.comp-delete { display: none }
+
+		img[data-edit] { height: 75px }
+
+		.sheet-title {
+			--sheet-title-font-size: #{toRem(32px)};
+			--sheet-title-height-mult: 1.5;
+
+			grid-area: title;
+			overflow: visible;
+			font-family: var(--font-emphasis);
+			color: var(--blades-white-bright);
+			font-size: var(--sheet-title-font-size);
+			font-variant: small-caps;
+			height: calc(var(--sheet-title-height-mult) * var(--sheet-title-font-size));
+			margin-top: calc(-1 * var(--content-padding));
+			position: relative;
+			// top: calc(-1 * (var(--sheet-title-font-size) / 6));
+		}
+
+		.sheet-subtitle {
+			--sheet-subtitle-font-size: #{toRem(24px)};
+			--sheet-subtitle-height-mult: 1.8;
+
+			grid-area: subtitle;
+			overflow: visible;
+			font-family: var(--font-decorative);
+			font-size: var(--sheet-subtitle-font-size);
+			height: calc(var(--sheet-subtitle-height-mult) * var(--sheet-subtitle-font-size));
+			margin-top: calc(-0.75 * var(--sheet-subtitle-font-size));
+		}
 	}
-}
 
-.window-content section { position: relative; z-index: 2 }
-
-.window-content section.sheet-top {
-	display: grid;
-	width: calc(100% + 2 * var(--content-padding));
-	left: calc(-1 * var(--content-padding));
-	grid-template-areas:
-		"title"
-		"subtitle";
-	grid-gap: 0;
-	grid-auto-columns: 1fr;
-	grid-auto-rows: auto;
-	place-items: center stretch;
-	pointer-events: none;
-	position: relative;
-
-	img[data-edit] {
-		// position: absolute;
-		height: 75px;
-		margin: 0 12.5px 12.5px 0;
-	}
-
-	img[data-edit], input, a, [name] { pointer-events: auto }
-
-	> * {
-		z-index: 2;
-	}
-
-	.sheet-title {
-		--sheet-title-font-size: #{toRem(32px)};
-		--sheet-title-height-mult: 1.4;
-
-		--sheet-title-height: calc(var(--sheet-title-height-mult) * var(--sheet-title-font-size));
-
-		grid-area: title;
-		overflow: visible;
-		font-family: var(--font-emphasis);
-		color: var(--blades-white-bright);
-		font-size: var(--sheet-title-font-size);
-		font-variant: small-caps;
-		height: var(--sheet-title-height);
-		margin-top: calc(-1 * var(--content-padding));
+	&.sheet-mid-bar {
+		display: flex;
+		justify-content: stretch;
+		align-items: stretch;
+		flex-wrap: nowrap;
+		border-top: 2px solid var(--blades-white);
+		border-bottom: 2px solid var(--blades-white);
+		background: linear-gradient(to bottom, var(--blades-white), transparent 25%);
+		background: transparent;
 		position: relative;
-		// top: calc(-1 * (var(--sheet-title-font-size) / 6));
+		width: calc(100% + (2 * var(--content-padding)));
+		height: toRem(60px);
+		left: calc(-1 * var(--content-padding));
+		padding: 0 var(--content-padding);
 	}
 
-	.sheet-subtitle {
-		--sheet-subtitle-font-size: #{toRem(24px)};
-		--sheet-subtitle-height-mult: 1.8;
 
-		--sheet-subtitle-height: calc(var(--sheet-subtitle-height-mult) * var(--sheet-subtitle-font-size));
-
-		grid-area: subtitle;
-		overflow: visible;
-		font-family: var(--font-decorative);
-		font-size: var(--sheet-subtitle-font-size);
-		height: var(--sheet-subtitle-height);
-		margin-top: calc(-0.75 * var(--sheet-subtitle-font-size));
-	}
 }
 
-.window-content section.sheet-mid-bar {
-	display: flex;
-	justify-content: stretch;
-	align-items: stretch;
-	flex-wrap: nowrap;
-	border-top: 2px solid var(--blades-white);
-	border-bottom: 2px solid var(--blades-white);
-	background: linear-gradient(to bottom, var(--blades-white), transparent 25%);
-	background: transparent;
-	position: relative;
-	width: calc(100% + (2 * var(--content-padding)));
-	height: toRem(60px);
-	left: calc(-1 * var(--content-padding));
-	padding: 0 var(--content-padding);
-}
 
 .window-content .effects-list {
 	width: 100%;
@@ -160,7 +136,7 @@
 		font-size: toRem(14px);
 		color: var(--blades-white-bright);
 		text-transform: uppercase;
-		margin-left: 10px;
+		margin-left: toRem(5px);
 
 	}
 }
@@ -172,7 +148,7 @@
 
 	> * { width: 100% }
 
-	.nav-tabs {
+	> .nav-tabs.flex-horizontal {
 		background-color: var(--blades-grey-bright);
 		border: 2px solid var(--blades-white);
 		padding: 0 toRem(10px);
@@ -180,10 +156,12 @@
 		height: toRem(26px);
 		min-height: toRem(26px);
 		overflow: visible;
+		align-items: center;
+		justify-content: space-around;
 
 		.tab-selector {
 			color: var(--blades-black);
-			padding: 0 toRem(10px);
+			padding: 0 toRem(5px);
 			font-family: Kirsty;
 			line-height: toRem(20px);
 			transition: 0.25s;
@@ -198,7 +176,7 @@
 						transparent);
 				transform: scale(1.2);
 				position: relative;
-				z-index: 2;
+				z-index: zLevel();
 			}
 
 			&:hover:not(.active) {
@@ -255,12 +233,6 @@
 	}
 }
 
-.window-content form.editable .actors-container {
-	// position: absolute;
-	height: toRem(60px);
-	width: 100%;
-	justify-content: flex-start;
-}
 
 .window-content .turf-list { @import "../components/turf-block" }
 
