--- a/scss/style.scss
+++ b/scss/style.scss
@@ -104,7 +104,7 @@
 					display: block;
 					opacity: 0.25;
 					pointer-events: auto;
-					z-index: 1;
+					z-index: zLevel(+1);
 
 					&:hover {
 						opacity: 1
